WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34191
DumpRenderTree silently crashes at the end of the run because geolocationControllerClient pointer is 0
https://bugs.webkit.org/show_bug.cgi?id=34191
Summary
DumpRenderTree silently crashes at the end of the run because geolocationCont...
Dmitry Titov
Reported
2010-01-26 17:02:58 PST
Created
attachment 47465
[details]
Crash log. DRT crashes dereferencing 0 pointer (see attached crash report). This happens a few times during run-webkit-test, no bad diagnostics but it makes the run longer because it waits on ReportCrash. Since Page can be created with 0 geolocationControllerClient, it seems the simple fix is to add 0 check. Patch is coming.
Attachments
Crash log.
(30.56 KB, text/plain)
2010-01-26 17:02 PST
,
Dmitry Titov
no flags
Details
Patch.
(2.12 KB, patch)
2010-01-26 17:09 PST
,
Dmitry Titov
sfalken
: review+
dimich
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-01-26 17:05:05 PST
<
rdar://problem/7582135
>
Dmitry Titov
Comment 2
2010-01-26 17:06:21 PST
to reproduce, run: run-webkit-tests LayoutTests/svg/W3C-SVG-1.1/struct-image-05-b.svg
Dmitry Titov
Comment 3
2010-01-26 17:09:21 PST
Created
attachment 47469
[details]
Patch.
Dmitry Titov
Comment 4
2010-01-26 17:25:06 PST
Landed:
http://trac.webkit.org/changeset/53876
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug