DumpRenderTree silently crashes at the end of the run because geolocationControllerClient pointer is 0. https://bugs.webkit.org/show_bug.cgi?id=34191

Reviewed by Steve Falkenburg.

* page/GeolocationController.cpp:
(WebCore::GeolocationController::~GeolocationController): Add check for m_client being 0.
(WebCore::GeolocationController::addObserver): Ditto.
(WebCore::GeolocationController::removeObserver): Ditto.
(WebCore::GeolocationController::lastPosition): Ditto.

git-svn-id: svn://svn.chromium.org/blink/trunk@53876 bbb929c8-8fbe-4397-9dbb-9b2b20218538