third_party/WebKit/WebCore/page/GeolocationController.cpp
@@ -41,7 +41,8 @@ GeolocationController::GeolocationController(Page* page, GeolocationControllerCl
 
 GeolocationController::~GeolocationController()
 {
-    m_client->geolocationDestroyed();
+    if (m_client)
+        m_client->geolocationDestroyed();
 }
 
 void GeolocationController::addObserver(Geolocation* observer)
@@ -50,7 +51,7 @@ void GeolocationController::addObserver(Geolocation* observer)
 
     bool wasEmpty = m_observers.isEmpty();
     m_observers.add(observer);
-    if (wasEmpty)
+    if (wasEmpty && m_client)
         m_client->startUpdating();
 }
 
@@ -60,7 +61,7 @@ void GeolocationController::removeObserver(Geolocation* observer)
         return;
 
     m_observers.remove(observer);
-    if (m_observers.isEmpty())
+    if (m_observers.isEmpty() && m_client)
         m_client->stopUpdating();
 }
 
@@ -82,6 +83,9 @@ void GeolocationController::errorOccurred(GeolocationError* error)
 
 GeolocationPosition* GeolocationController::lastPosition()
 {
+    if (!m_client)
+        return 0;
+
     return m_client->lastPosition();
 }
 
